tests/field/call_non_fn_field.rev
struct Foo { bar }

var foo = Foo()
foo.bar = "not fn"

foo.bar() // error: only functions and structures are callable